Added files inex.html, food.html, login.html, weight.html, and workouts.html

--- a/weight.html
+++ b/weight.html
@@ -15,7 +15,7 @@
 
             /* Padding to adjust the gradient aloong with the bakground icons */ 
             padding: 100px;
-
+            
             /* Gradient background to become more transparent with flowing down */
             background: linear-gradient(to bottom, #77e3eb, #0eb1da);
         }
@@ -26,31 +26,6 @@
             border-radius: 5px;
             /* Some box shadow razzle dazzle */
             box-shadow: 2px 4px 15px #414040;
-        }
-
-        /* Styling paragraph colors for text */
-        p {
-            color: #555;
-            word-wrap: normal;
-        }
-
-        /* Styling for the navigation links located under the second header */
-        a {
-            display: block;
-            margin: 15px 0;
-            padding: 12px;
-            background-color: #3498db;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 15px;
-            transition: background-color 0.3s;
-            /* Some box shadow razzle dazzle */
-            box-shadow: 1px 1px 3px #888888;
-        }
-
-        /* Including styling for the hover aspects of the links as well */
-        a:hover {
-            background-color: #2980b9;
         }
 
         /* Styling for the back button */
@@ -73,24 +48,12 @@
         }
     </style>
 </head>
+
 <body>
     <!-- Main header for applicaiton -->
-    <h1>Hello, GitFit App!</h1>
-    <!-- Display user stats, progress, and other general information here -->
-    <p>User: [Username]</p>
-    <p>Weight: [Current_weight]</p>
-    <p>Main goals this month: [Main_goals]</p>
-
-    <!-- Secondary smaller header for application -->
-    <h2>Select what you would like to do!</h2>
-
-    <!-- Navigation links to other sections -->
-    <a href="weight.html">Weight Tracking</a>
-    <a href="food.html">Food Calculator</a>
-    <a href="notes.html">Note Records</a>
-    <a href="workouts.html">Workout Tracking</a>
+    <h1>Welcome to the weight tracker!</h1>
 
     <!-- Back button -->
-    <a href="login.html" class="back-button">&#8678; Back to Login</a>
+    <a href="index.html" class="back-button">&#8678; Back to Main</a>
 </body>
 </html>
