updated food, weight, workouts go to main with index.php instead of index.html

--- a/food.html
+++ b/food.html
@@ -54,6 +54,6 @@
     <h1>Welcome to the food tracker!</h1>
 
     <!-- Back button -->
-    <a href="index.html" class="back-button">&#8678; Back to Main</a>
+    <a href="index.php" class="back-button">&#8678; Back to Main</a>
 </body>
 </html>
