--- a/weight.html
+++ b/weight.html
@@ -13,6 +13,6 @@
     <h1 id="h1">Welcome to the weight tracker!</h1>
 
     <!-- Back button -->
-    <a href="index.html" class="back-button">&#8678; Back to Main</a>
+    <a href="index.php" class="back-button">&#8678; Back to Main</a>
 </body>
 </html>
