--- a/food.html
+++ b/food.html
@@ -10,7 +10,7 @@
 
 <body>
     <!-- Main header for applicaiton -->
-    <h1>Welcome to the food tracker!</h1>
+    <h1>Welcome!</h1>
 
     <!-- Back button -->
     <a href="index.php" class="back-button">&#8678; Back to Main</a>
